[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[[bin]]
name = "smoke_test"
path = "src/smoke_test_0/main.rs"

[[bin]]
name = "prime_time"
path = "src/prime_time_1/main.rs"
