[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
primes = "0.3.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[[bin]]
name = "smoke_test"
path = "src/smoke_test_0/main.rs"

[[bin]]
name = "prime_time"
path = "src/prime_time_1/main.rs"

[[bin]]
name = "means_to_an_end"
path = "src/means_to_an_end_2/main.rs"

[[bin]]
name = "budget_chat"
path = "src/budget_chat_3/main.rs"

[[bin]]
name = "unusual_db"
path = "src/unusual_db_4/main.rs"

[[bin]]
name = "mob_proxy"
path = "src/mob_in_the_middle_5/main.rs"

[[bin]]
name = "speed"
path = "src/speed_daemon_6/main.rs"
